--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "flask"
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
