--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "psycopg2>=2.9.9",
     "sqlalchemy>=2.0.29",
     "sqlmodel>=0.0.16",
+    "flask-migrate>=4.0.7",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
